--- a/package.json
+++ b/package.json
@@ -15,5 +15,25 @@
     "prototype"
   ],
   "author": "skkim",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-watch": "^2.0.2",
+    "chai": "^3.5.0",
+    "expect": "^1.20.1",
+    "mocha": "^2.4.5",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "data.either": "^1.4.0",
+    "data.maybe": "^1.2.2",
+    "data.task": "^3.1.0",
+    "ramda": "^0.21.0"
+  }
 }
